--- a/app/views/home.html
+++ b/app/views/home.html
@@ -82,12 +82,12 @@
                                         {{item.name}}
                                     </div>
                                     <div class="col-md-1">
-                                        <div class="text text-success">{{item.price * item.qty | currency:"INR":0.00}}</div>
+                                        <div class="text text-success">{{item.price * item.qty | currency:"INR":2}}</div>
                                     </div>
                                     <div class="col-md-1 col-md-push-1">
-                                        <div class="text text-warning">{{item.price | currency:"INR":0.00}}</div>
+                                        <div class="text text-warning">{{item.price | currency:"INR":2}}</div>
                                     </div>
-                                    <div class="col-md-2 col-md-push-1">
+                                    <div class="col-md-2 col-md-push-2">
                                         <button class="btn btn-success btn-xs" ng-click="addToOrder(item,1)">
                                             <span class="glyphicon glyphicon-plus"></span>
                                         </button>
@@ -95,7 +95,7 @@
                                             <span class="glyphicon glyphicon-minus"></span>
                                         </button>
                                     </div>
-                                    <div class="col-md-1 col-md-push-1">
+                                    <div class="col-md-1 col-md-push-2">
                                         <button class="btn btn-danger btn-xs" ng-click="removeItem(item)">
                                             <span class="glyphicon glyphicon-trash"></span>
                                         </button>
@@ -105,7 +105,7 @@
                         </ul>
                     </div>
                     <div class="panel-footer" ng-show="order.length">
-                        <h3><span class="label label-primary">Total: {{getTotal() | currency:"INR ":0.00}}</span></h3>
+                        <h3><span class="text text-primary">Total: {{getTotal() | currency:"INR ":2}}</span></h3>
                     </div>
                     <div class="panel-footer" ng-show="order.length">
                         <div>
