--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div data-ng-if="isAuthenticated()" class="container">
   <div class="col-md-12">
           <div class="row">
               <div class="col-md-6">
